--- a/about.html
+++ b/about.html
@@ -56,19 +56,25 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>1978: Establishment</h4>
-                        <p>ISACC was established in response to the historical crisis of authoritarianism in the Philippines, beginning decades of advocacy and development work.</p>
+                        <p>ISACC was founded in July 1978 amid the historical crisis of authoritarianism in the Philippines, beginning decades of political advocacy and development work.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>1986: People Power Revolution</h4>
-                        <p>Organized 'Konfes' (Konsensiya ng Febrero Siete), mobilizing a network of churches to serve as the center of evangelical presence at the EDSA barricades.</p>
+                        <p>At the height of resistance to the Marcos regime, ISACC organized 'Konfes' (Konsensiya ng Febrero Siete), mobilizing a network of churches to establish a strong evangelical presence at the EDSA barricades.</p>
                     </div>
                 </div>
                  <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>1990s-2000s: National Campaigns</h4>
-                        <p>Participated in major national campaigns, including the push for agrarian reform, the dismantling of US military bases, and the Jubilee 2000 debt cancellation movement.</p>
+                        <p>Engaged in major national campaigns, including the push for agrarian reform, the dismantling of US military bases, and the Jubilee 2000 movement for debt cancellation for poor countries.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h4>2000s: Global Advocacy</h4>
+                        <p>Organized the national campaign for the Micah Challenge, a global movement to end poverty and achieve the UN Millennium Development Goals.</p>
                     </div>
                 </div>
             </div>
@@ -80,12 +86,12 @@
             <h2>Our Linkages & Partners</h2>
             <p>ISACC maintains a wide network of relationships with individuals and organizations of similar concerns. Our solidarity network is global, ranging from alliances like the Micah Global network to academic institutions and local NGOs.</p>
             <div class="logo-grid">
-                <div class="logo-item"><span>Micah Global</span></div>
-                <div class="logo-item"><span>Langham Partnership</span></div>
-                <div class="logo-item"><span>TEAR Fund</span></div>
-                <div class="logo-item"><span>World Vision</span></div>
-                <div class="logo-item"><span>INFEMIT</span></div>
-                <div class="logo-item"><span>Regent College</span></div>
+                <div class="logo-item"><img src="micah.jpg" alt="Micah Global Logo"></div>
+                <div class="logo-item"><img src="langham.png" alt="Langham Partnership Logo"></div>
+                <div class="logo-item"><img src="tearfund.png" alt="TEAR Fund Logo"></div>
+                <div class="logo-item"><img src="worldvision.png" alt="World Vision Logo"></div>
+                <div class="logo-item"><img src="infemit.webp" alt="INFEMIT Logo"></div>
+                <div class="logo-item"><img src="regent.jpg" alt="Regent College Logo"></div>
             </div>
             <div class="linkages-categories">
                 <div class="linkages-category">
@@ -146,22 +152,22 @@
             <h2>Our Leadership</h2>
             <div class="boards-grid">
                  <div class="board-member-card">
-                    <div class="board-placeholder-img"><i class="fa-solid fa-user"></i></div>
+                    <div class="board-placeholder-img"><img src="maggay.jpg" alt="Photo of Melba P. Maggay"></div>
                     <h4>Melba P. Maggay, Ph.D.</h4>
                     <p>Chairman</p>
                 </div>
                  <div class="board-member-card">
-                    <div class="board-placeholder-img"><i class="fa-solid fa-user"></i></div>
+                    <div class="board-placeholder-img"><img src="callanta.jpeg" alt="Photo of Ruth S. Callanta"></div>
                     <h4>Ruth S. Callanta</h4>
                     <p>Vice-Chairman</p>
                 </div>
                  <div class="board-member-card">
-                    <div class="board-placeholder-img"><i class="fa-solid fa-user"></i></div>
+                    <div class="board-placeholder-img"><img src="mallari.jpg" alt="Photo of Julieta C. Mallari"></div>
                     <h4>Julieta C. Mallari, Ph.D.</h4>
                     <p>Secretary</p>
                 </div>
                  <div class="board-member-card">
-                    <div class="board-placeholder-img"><i class="fa-solid fa-user"></i></div>
+                    <div class="board-placeholder-img"><img src="lara.jpg" alt="Photo of Wilmina R. Lara"></div>
                     <h4>Wilmina R. Lara, Ph.D.</h4>
                     <p>Treasurer</p>
                 </div>
