--- a/advocacy.html
+++ b/advocacy.html
@@ -17,9 +17,17 @@
 
     <section class="intro-section">
         <div class="content-wrapper">
-            <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
-            <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
-            <p>Today, our long-term <strong>Popular Education for Good Governance (PEGG)</strong> program continues this legacy. A unique feature of our work is the integration of Biblical perspectives into the analysis of complex issues, intentionally training young people to become biblically literate and apply God’s Word to the public square.</p>
+            <div class="two-column-layout">
+                <div class="column-text">
+                    <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
+                    <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
+                    <p>Today, our long-term <strong>Popular Education for Good Governance (PEGG)</strong> program continues this legacy. A unique feature of our work is the integration of Biblical perspectives into the analysis of complex issues, intentionally training young people to become biblically literate and apply God’s Word to the public square.</p>
+                </div>
+                <div class="column-images">
+                    <img src="advocacy2.jpg" alt="Historical photo of a political event in Manila.">
+                    <img src="advocacy3.jpg" alt="Historical photo of a street protest in Manila.">
+                </div>
+            </div>
         </div>
     </section>
     
@@ -38,40 +46,61 @@
 
     <section class="faith-politics-section">
         <div class="content-wrapper">
-            <h2>Faith and Politics Initiative</h2>
-            <p>During the 2022 Presidential Election, we launched a major webinar series on “Faith and Politics.” In partnership with Evangelical scholars and experts, we aimed to help Christians engage in national transformation based on sound biblical-theological teachings.</p>
-            <p>This initiative is a collaboration with the <strong>PCEC Justice, Peace and Reconciliation Commission (JPARCOM)</strong> and <strong>Langham Publishing (UK)</strong>. The series will result in a book that addresses the need for contextualized resources in a region where most seminaries rely on Western textbooks, hoping to be a valuable contribution to the conversation on theology and politics in the Philippines and Asia.</p>
+            <div class="initiative-card">
+                <div class="initiative-text">
+                    <h2>Faith and Politics Initiative</h2>
+                    <p>During the 2022 Presidential Election, we launched a major webinar series on “Faith and Politics.” In partnership with Evangelical scholars and experts, we aimed to help Christians engage in national transformation based on sound biblical-theological teachings.</p>
+                    <p>This initiative is a collaboration with the <strong>PCEC Justice, Peace and Reconciliation Commission (JPARCOM)</strong> and <strong>Langham Publishing (UK)</strong>. The series will result in a book that addresses the need for contextualized resources in a region where most seminaries rely on Western textbooks, hoping to be a valuable contribution to the conversation on theology and politics in the Philippines and Asia.</p>
+                </div>
+                <div class="initiative-image">
+                    <img src="advocacy4.jpeg" alt="Flyer for the Faith and Politics webinar series.">
+                </div>
+            </div>
         </div>
     </section>
 
     <section class="media-production-section">
         <div class="content-wrapper">
-            <h2>Media Production for Social Change</h2>
-            <p>Our multi-media shows serve as culture-friendly learning tools for a people whose cognitive style is largely visual, acting as artistic statements of our commitment to wholistic transformation. Our productions include:</p>
-            <ul class="productions-list">
-                <li><strong><i class="fa-solid fa-film"></i> The Filipino’s Revolution:</strong> A 15-minute analysis of the February 1986 Revolution in light of the Filipino’s socio-psychological makeup.</li>
-                <li><strong><i class="fa-solid fa-film"></i> Pag-aalay:</strong> A 27-minute show exploring Filipino religious beliefs and their connection to the Gospel.</li>
-                <li><strong><i class="fa-solid fa-film"></i> Kapag Nahawi ang Ulap sa Mukha ng Diyos:</strong> A complex, multi-projector show retelling gospel stories in a contemporary Filipino context.</li>
-                <li><strong><i class="fa-solid fa-film"></i> Onse de Mayo (May Eleven):</strong> A 15-minute documentary discussing personality-based vs. issue-based electoral systems and how to choose leaders wisely.</li>
-                <li><strong><i class="fa-solid fa-film"></i> Statue Square:</strong> A 17-minute show on the situation of Filipina domestic helpers in Hongkong, questioning the viability of the migrant labor industry.</li>
-                <li><strong><i class="fa-solid fa-film"></i> Dangal ng Bansa (Pride of the Nation):</strong> A 20-minute show tackling nationalism from biblical perspectives to stimulate the Church’s participation in national affairs.</li>
-                 <li><strong><i class="fa-solid fa-film"></i> Media Today: Tomorrow’s Society?:</strong> A 7-minute show presenting the state of Philippine media and its effect in shaping society.</li>
-            </ul>
+            <div class="media-layout">
+                <div class="media-text">
+                    <h2>Media Production for Social Change</h2>
+                    <p>Our multi-media shows serve as culture-friendly learning tools for a people whose cognitive style is largely visual, acting as artistic statements of our commitment to wholistic transformation. Our productions include:</p>
+                    <div class="productions-grid">
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> The Filipino’s Revolution</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Pag-aalay</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Kapag Nahawi ang Ulap...</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Onse de Mayo</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Statue Square</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Dangal ng Bansa</strong></div>
+                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Media Today</strong></div>
+                    </div>
+                </div>
+                <div class="media-image">
+                    <img src="advocacy5.png" alt="A photo from a theatre event.">
+                </div>
+            </div>
         </div>
     </section>
 
     <section class="legacy-forums-section">
         <div class="content-wrapper">
-            <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
-            <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
-            <ul class="legacy-list">
-                <li><strong>Philippine Realities Conferences (1981, 1985):</strong> Stimulated church responses to authoritarian rule.</li>
-                <li><strong>Seminar on Philippine Socio-Cultural History (1984):</strong> Featured nationalist thinker Renato Constantino.</li>
-                <li><strong>Courses on Social Change & Christian Ethics (1985):</strong> Led by Dr. John Howard Yoder, a leading thinker on active non-violence.</li>
-                <li><strong>Theology Encounters Revolution (1987):</strong> A course on theology in a revolutionary situation by Andrew Kirk of the London Institute for Contemporary Christianity.</li>
-                <li><strong>Lecture on The State as Servant and Subversive:</strong> Featured Dr. Ronald Sider, author of <em>Rich Christians in an Age of Hunger</em>.</li>
-                <li><strong>Public Symposia:</strong> Numerous lectures on human rights, vigilantism, national debt, insurgency, and other pressing issues, led by national experts.</li>
-            </ul>
+            <div class="two-column-layout-reversed">
+                <div class="column-images">
+                    <img src="image4.jpg" alt="A photo from a forum event.">
+                </div>
+                <div class="column-text">
+                    <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
+                    <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
+                    <ul class="legacy-list">
+                        <li><strong>Philippine Realities Conferences (1981, 1985):</strong> Stimulated church responses to authoritarian rule.</li>
+                        <li><strong>Seminar on Philippine Socio-Cultural History (1984):</strong> Featured nationalist thinker Renato Constantino.</li>
+                        <li><strong>Courses on Social Change & Christian Ethics (1985):</strong> Led by Dr. John Howard Yoder.</li>
+                        <li><strong>Theology Encounters Revolution (1987):</strong> A course by Andrew Kirk of the London Institute for Contemporary Christianity.</li>
+                        <li><strong>Lecture on The State as Servant and Subversive:</strong> Featured Dr. Ronald Sider.</li>
+                        <li><strong>Public Symposia:</strong> Numerous lectures on human rights, vigilantism, national debt, and more.</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 
