--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="book-details">
                     <h3>Explore the Lessons of History</h3>
-                    <h2>To Be in History, Dark Days of Authoritarianism</h2>
+                    <h2>Dark Days of Authoritarianism: To Be in History</h2>
                     <p>First-person accounts of the Philippine experience of martial rule, shedding light on the social, personal, and spiritual conditions that shaped a generation.</p>
                     <div class="testimonials">
                         <blockquote>
