--- a/podcast.html
+++ b/podcast.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="host-spotlight">
-                    <img src="podcast2.jpg" alt="Dr. Melba Padilla Maggay">
+                    <img src="maggay.jpg" alt="Dr. Melba Padilla Maggay">
                     <div class="host-info">
                         <h4>Hosted by Dr. Melba Padilla Maggay</h4>
                         <p>A distinguished writer, social anthropologist, and passionate social activist.</p>
@@ -57,19 +57,19 @@
             <p>We bring together diverse perspectives from leaders and thinkers to enrich our public conversations.</p>
             <div class="guest-grid">
                 <div class="guest-card">
-                    <img src="podcast3.jpg" alt="Guest 1">
-                    <h4>Guest Name 1</h4>
-                    <span>Field/Expertise</span>
+                    <img src="guest1.jpeg" alt="Dr. Emmanuel Luna">
+                    <h4>Dr. Emmanuel Luna</h4>
+                    <span>Professor of Community Development, University of the Philippines</span>
                 </div>
                 <div class="guest-card">
-                    <img src="podcast4.jpg" alt="Guest 2">
-                    <h4>Guest Name 2</h4>
-                    <span>Field/Expertise</span>
+                    <img src="guest2.jpg" alt="Ernesto Maceda Jr.">
+                    <h4>Ernesto Maceda Jr.</h4>
+                    <span>Comelec Commissioner</span>
                 </div>
                 <div class="guest-card">
-                    <img src="podcast5.jpg" alt="Guest 3">
-                    <h4>Guest Name 3</h4>
-                    <span>Field/Expertise</span>
+                    <img src="guest3.png" alt="Dr. Jimmuel C. Naval">
+                    <h4>Dr. Jimmuel C. Naval</h4>
+                    <span>Dean, UP Diliman College of Arts and Literature</span>
                 </div>
             </div>
         </div>
