--- a/podcast.html
+++ b/podcast.html
@@ -57,7 +57,7 @@
             <p>We bring together diverse perspectives from leaders and thinkers to enrich our public conversations.</p>
             <div class="guest-grid">
                 <div class="guest-card">
-                    <img src="guest1.jpeg" alt="Dr. Emmanuel Luna">
+                    <img src="guest1.jpg" alt="Dr. Emmanuel Luna">
                     <h4>Dr. Emmanuel Luna</h4>
                     <span>Professor of Community Development, University of the Philippines</span>
                 </div>
