--- a/podcast.html
+++ b/podcast.html
@@ -40,7 +40,7 @@
                 <h3>Latest Episode:</h3>
                 <div class="video-container">
                     <iframe
-                        src="https://www.youtube.com/embed/videoseries?list=UU...YOUR_PLAYLIST_ID..."
+                        src="https://www.youtube.com/watch?v=tV0Jq68OqWI" 
                         title="Latest Isip-Isak YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
