--- a/advocacy.html
+++ b/advocacy.html
@@ -17,33 +17,26 @@
 
     <section class="intro-section">
         <div class="content-wrapper">
-            <div class="two-column-layout">
-                <div class="column-text">
-                    <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
+            <h2>ADVOCACY AND POPULAR EDUCATION FOR GOOD GOVERNANCE (PEGG)</h2>
+            <div class="text-image-pair">
+                <div class="pair-text">
                     <p>ISACC’s advocacy work has deep historical roots, culminating in the mobilization of church communities during the resistance to the Marcos regime. We organized <strong>Konfes (Konsensiya ng Febrero Siete)</strong>, a coalition that became a center of evangelical presence at the barricades during the February 1986 People Power uprising.</p>
+                </div>
+                <div class="pair-image">
+                    <img src="advocacy2.jpg" alt="Historical photo of a political event in Manila.">
+                </div>
+            </div>
+            <div class="text-image-pair">
+                <div class="pair-text">
                     <p>Today, our long-term <strong>Popular Education for Good Governance (PEGG)</strong> program continues this legacy. A unique feature of our work is the integration of Biblical perspectives into the analysis of complex issues, intentionally training young people to become biblically literate and apply God’s Word to the public square.</p>
                 </div>
-                <div class="column-images">
-                    <img src="advocacy2.jpg" alt="Historical photo of a political event in Manila.">
+                <div class="pair-image">
                     <img src="advocacy3.jpg" alt="Historical photo of a street protest in Manila.">
                 </div>
             </div>
         </div>
     </section>
     
-    <section class="find-our-voice-section">
-        <div class="content-wrapper">
-             <h2>Find Our Voice</h2>
-             <p>Through our online talk show, ISIP ISAK, and articles for national readership, we engage with pressing socio-cultural issues. Explore our contributions on these platforms.</p>
-             <div class="social-links">
-                <a href="http://opinion.inquirer.net/byline/melba-padilla-maggay" target="_blank" class="social-button-dark">Philippine Daily Inquirer</a>
-                <a href="https://www.rappler.com/author/melba-padilla-maggay/" target="_blank" class="social-button-dark">Rappler Author Page</a>
-                <a href="https://febc.ph/dzfe/" target="_blank" class="social-button-dark"><i class="fa-solid fa-microphone"></i> 98.7 DZFE (English)</a>
-                <a href="https://www.febc.ph/dwas-program-grid/" target="_blank" class="social-button-dark"><i class="fa-solid fa-microphone"></i> 702 DZAS (Tagalog)</a>
-             </div>
-        </div>
-    </section>
-
     <section class="faith-politics-section">
         <div class="content-wrapper">
             <div class="initiative-card">
@@ -61,22 +54,43 @@
 
     <section class="media-production-section">
         <div class="content-wrapper">
-            <div class="media-layout">
+            <h2>Media Production for Social Change</h2>
+            <div class="media-intro-layout">
                 <div class="media-text">
-                    <h2>Media Production for Social Change</h2>
                     <p>Our multi-media shows serve as culture-friendly learning tools for a people whose cognitive style is largely visual, acting as artistic statements of our commitment to wholistic transformation. Our productions include:</p>
-                    <div class="productions-grid">
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> The Filipino’s Revolution</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Pag-aalay</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Kapag Nahawi ang Ulap...</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Onse de Mayo</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Statue Square</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Dangal ng Bansa</strong></div>
-                        <div class="production-item"><strong><i class="fa-solid fa-film"></i> Media Today</strong></div>
-                    </div>
                 </div>
                 <div class="media-image">
                     <img src="advocacy5.png" alt="A photo from a theatre event.">
+                </div>
+            </div>
+            <div class="productions-list-single-column">
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> The Filipino’s Revolution: Frightening Away the Dragon that had Long Swallowed the Sun</strong>
+                    <p>A 15-minute account of the February Revolution of 1986, with an analysis of its significance in the light of the Filipino’s socio-psychological makeup.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Pag-aalay</strong>
+                    <p>A 27-minute show exploring the gospel as it relates to Filipino religious beliefs.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Kapag Nahawi ang Ulap sa Mukha ng Diyos</strong>
+                    <p>A complex, multi-projector show that retells gospel stories in a contemporary Filipino context.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Onse de Mayo (May Eleven)</strong>
+                    <p>A 15-minute documentary discussing the traditional personality-based Philippine electoral system versus an issue-based alternative, providing pointers for choosing leaders wisely.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Statue Square</strong>
+                    <p>A 17-minute show presenting the situation of Filipina domestic helpers in Hong Kong through interviews, raising questions about the viability of the migrant labor industry.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Dangal ng Bansa (Pride of the Nation)</strong>
+                    <p>A 20-minute show tackling nationalism from biblical perspectives, aimed at stimulating discussion in churches on Filipino Christians’ basis for socio-political involvement in national affairs and development.</p>
+                </div>
+                <div class="production-item">
+                    <strong><i class="fa-solid fa-film"></i> Media Today: Tomorrow’s Society?</strong>
+                    <p>A 7-minute show presenting the state of Philippine media and posing the question of media’s effect in shaping tomorrow’s society.</p>
                 </div>
             </div>
         </div>
@@ -84,23 +98,35 @@
 
     <section class="legacy-forums-section">
         <div class="content-wrapper">
-            <div class="two-column-layout-reversed">
-                <div class="column-images">
-                    <img src="image4.jpg" alt="A photo from a forum event.">
-                </div>
-                <div class="column-text">
-                    <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
-                    <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
-                    <ul class="legacy-list">
-                        <li><strong>Philippine Realities Conferences (1981, 1985):</strong> Stimulated church responses to authoritarian rule.</li>
-                        <li><strong>Seminar on Philippine Socio-Cultural History (1984):</strong> Featured nationalist thinker Renato Constantino.</li>
-                        <li><strong>Courses on Social Change & Christian Ethics (1985):</strong> Led by Dr. John Howard Yoder.</li>
-                        <li><strong>Theology Encounters Revolution (1987):</strong> A course by Andrew Kirk of the London Institute for Contemporary Christianity.</li>
-                        <li><strong>Lecture on The State as Servant and Subversive:</strong> Featured Dr. Ronald Sider.</li>
-                        <li><strong>Public Symposia:</strong> Numerous lectures on human rights, vigilantism, national debt, and more.</li>
-                    </ul>
-                </div>
-            </div>
+            <h2>A Legacy of Engagement: Key Fora & Seminars</h2>
+            <p>Throughout our history, ISACC has stimulated critical thinking by engaging churches, grassroots communities, and the public on vital issues. Notable events include:</p>
+            <img src="image4.jpg" alt="A photo from a forum event." class="legacy-main-image">
+            <ul class="legacy-events-list">
+                <li>
+                    <strong>Philippine Realities Conferences (1981, 1985):</strong>
+                    <p>These conferences stimulated reflection and concerted church responses to authoritarian rule.</p>
+                </li>
+                <li>
+                    <strong>Seminar on Philippine Socio-Cultural History (1984):</strong>
+                    <p>Conducted for executives of development agencies and church leaders, this seminar was led by nationalist thinker and scholar Renato Constantino.</p>
+                </li>
+                <li>
+                    <strong>Courses on Social Change & Christian Social Ethics (1985):</strong>
+                    <p>Both courses were led by John Howard Yoder, known for his book "The Politics of Jesus" and as a leading thinker on active non-violence.</p>
+                </li>
+                <li>
+                    <strong>Theology Encounters Revolution (1987):</strong>
+                    <p>A course by Andrew Kirk, then associate director of the London Institute for Contemporary Christianity, focusing on tensions confronting theology in a revolutionary situation.</p>
+                </li>
+                <li>
+                    <strong>The State as Servant and Subversive, Romans 13 and Revelation 13:</strong>
+                    <p>A lecture by Ronald Sider, author of "Rich Christians in an Age of Hunger" and chairperson of Evangelicals for Social Action.</p>
+                </li>
+                <li>
+                    <strong>Public Lectures and Symposia:</strong>
+                    <p>Numerous public events on critical issues such as human rights, vigilantism, national debt, insurgency, US Bases, women and tradition, delivered by national experts and leaders.</p>
+                </li>
+            </ul>
         </div>
     </section>
 
